tests/pos/conj-rhs.fq
constraint:
  env []
  lhs {v:int | true }
  rhs {v:int | (0 < 1) && (1 > 0) }
  id 1
  tag [1]
