tests/neg/float-literal.fq

constraint:
  env []
  lhs {VV#F2 : a_aZU | []}
  rhs {VV#F2 : a_aZU | [(VV#F2 >= 1.0)]}
  id 2 tag [2]
